assets/css/styles.css
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
    text-decoration: none;
}
body{
    overflow-x: hidden;
    background-color: #201f24;
}
.dot {
    height: 8px;
    width: 8px;
    background-color: rgb(255, 255, 255);
    border-radius: 50%;
    display: inline-block;
  }
.main-width{
    width: 1280px;
    max-width: 95%;
    margin: 0 auto;
    padding: 0px 20px;
}
.hero{
    width: 100%;
    height: 100%;
    min-height: 100vh;
    background: url(../img/background.jpg);
    background-size: cover;
    background-position: center;
}
#loading {
    width: 100vw;
    height: 100vh;
    position: fixed;
    background: #201f24;
    z-index: 999;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}
#spinner {
    animation: rotate 0.56s infinite linear;
    width:50px;
    height:50px;
    border:12px solid #ffffff;
    border-bottom:12px solid  #201f24;
    border-radius:50%;
    margin:0;
}
@keyframes rotate {
    0% {transform: rotate(0deg);}
    100% {transform: rotate(360deg);}
}
header{
    width:100%;
    padding:6vh 4vw;
    position:fixed;
    font-weight:bold;
    background:transparent;
    color:#fff;
    transition:0.4s ease-in-out;
    z-index:2;
}
header table {
    width:100%;
}
.home__title{
    color:#fff;
    margin-top: 75px;
}
.home__title-color{
    color:#05C55C;
}
#logo {
    width:20%;
}
#navigation {
    width:80%;
}
#magnify {
    width:100vw;
    height:100vh;
    background:rgba(0, 0, 0, 0.92);
    position:fixed;
    z-index:4;
    display:none;
    flex-direction: column;
    justify-content:center;
}
#magnify h1 {
    position:absolute;
    top:0;
    right:0;
    margin:20px 40px;
    color:#fff;
    transition:0.4s ease-in-out;
}
#magnify h1:hover{
    color:#05C55C;
    cursor:pointer;
}
#img_here {
    width:90%;
    height:90%;
    background-size:contain !important;
    background-repeat:no-repeat !important;
    margin:0px auto;
}
#logo {
    font-size:24px;
    color:#05C55C;
}
#navigation {
    text-align:right;
}
#navigation a {
    color:inherit;
    text-decoration:none;
    padding:5px 10px;
    border-bottom:2px solid transparent;
    margin-left:4vw;
    font-weight: 500;
    line-height: 24px;
    transition:0.4s ease-in-out;
}
#navigation a:hover{
    border-bottom:2px solid #fff;
}
.btn_contact{
    font-size:16px;
    font-weight: bold;
    line-height: 24px;
    color:#05C55C;
    background: transparent;
    border:2px solid #05C55C !important;
    border-radius:30px;
    transition:0.4s ease-in-out;
}
.btn_contact:hover{
    box-shadow:0px 10px 30px #05c55b75;
    cursor:pointer;
    color:#fff;
    background:#05C55C;
}
#top_part {
    width:100%;
}
#top_part tr td{
    width:50%;
}
#about {
    width:84% !important;
    height:95vh;
    display:flex;
    flex-direction:column;
    justify-content:center;
    text-align:left;
    padding:0px 8%;
}
#about h1 {
    font-size:45px;
    word-wrap:break-word;
}
#about table {
    width:30%;
    margin-top:4vh;
}
#about table tr td {
    width:20% !important;
    text-align:left;
}
.social {
    color:#05C55C;
    font-size:23px;
    padding:12px 17px;
    border-radius:50%;
    background:transparent;
    align-items: center;
    transition:0.4s ease-in-out;
    font-weight:bold;
    margin:0px 0px;
}
.social:hover { 
    cursor: pointer;
    color:#fff;
    background:#05C55C;
    box-shadow:0px 10px 30px #05c55b75;
}
.btn_one {
    font-size:16px;
    font-weight: bold;
    line-height: 24px;
    color:#ffffff;
    background: transparent;
    border:2px solid #05C55C;
    padding:8px 15px;
    border-radius:30px;
    transition:0.4s ease-in-out;
    margin-top: 5px;
    text-align: center;
    margin-right: 70%;
    margin-top: 40px;
}
.btn_one:hover {
    box-shadow:0px 10px 30px #05c55b75;
    cursor:pointer;
    color:#fff;
    background:#05C55C;
}
#work {
    width:92vw;
    padding:6vh 4vw;
    font-weight:bold;
}
#work h1 {
    padding:5px 0px;
    border-bottom:4px solid #05C55C;
    width:6%;
}
#photos {
    width:100%;
    columns:3;
    column-gap:4%;
    z-index:1;
    transition:0.4s ease-in-out;
}
#photos img {
    width:100%;
    height:auto;
    margin:4.5% 0px;
    transition:0.4s ease-in-out;
}
#photos img:hover {
    transform: scale(1.1);
    cursor: pointer;
}
#bio {
    width:92vw;
    padding:6vh 4vw;
    color: #fff;
}
#bio h1 {
    padding:5px 0px;
    border-bottom:4px solid #05C55C;
    width:8%;
}
#bio p{
    padding-top: 16px;
}
.link_text{
    color: #05C55C;
}
#contact {
    width:92vw;
    color: #fff;
    padding:6vh 4vw;
}
#contact h1 {
    padding:5px 0px;
    border-bottom:4px solid #05C55C;
    width:10%;
}
#contact table {
    width:100%;
}
#contact table tr td {
    width:50%;
}
#inner_div table{
    width:100%;
}
#inner_table tr td{
    padding:10px 20px !important;
}
#contact form {
    width:100%;
}
#contact form input {
    width:96%;
    margin:20px 1%;
    background:transparent;
    border:0px;
    border-bottom:3px solid #05c55b75;
    padding:8px 10px;
    font-family: 'Poppins', sans-serif;
    font-size:18px;
    transition:0.4s ease-in-out;
    color:#fff;
    font-weight:bold;
}
#contact form textarea {
    width:96%;
    margin:20px 1%;
    padding:8px 10px;
    border:0px;
    border-bottom:3px solid #05c55b75;
    padding:8px 10px;
    font-family: 'Poppins', sans-serif;
    font-size:18px;
    background:transparent;
    resize:none;
    transition:0.4s ease-in-out;
    color:#fff;
    font-weight:bold;
}
#contact form input:focus {
    outline:none;
    border-bottom:3px solid #05c55b75;
}
#contact form textarea:focus {
    outline:none;
    border-bottom:3px solid #05c55b75;
}
#address {
    position:relative;
    top:-25px;
    left:30px;
}
#footer {
    width:100%;
    padding:10vh 0px;
    text-align:center;
    color: #fff;
    font-weight: bold;
}
#footer a {
    color:#05C55C;
    text-decoration:none;
}
::placeholder {
    color:#fff;
}
button:focus {
    outline:none;
}
::-webkit-scrollbar {
    width:5px;
    height:5px;
}
::-webkit-scrollbar-track {
    background: #f1f1f1; 
}
::-webkit-scrollbar-thumb {
    background: rgb(0, 0, 0); 
}
::-webkit-scrollbar-thumb:hover {
    background: rgba(0, 0, 0,0.8); 
}

@media (max-width: 1000px){
    #photos {
    columns:1;
    column-gap:0%;
    }
    .home__title{
        margin-top: 96px;
    }
    #photos img {
        margin:2% 0px;
    }
    #photos img:hover {
        transform: scale(1);
        cursor: pointer;
    }
    #rightImage {
        display:none;
    }
    #top_part {
        border:0px;
    }
    #top_part tr td{
        width:100%;
        text-align:center;
    }
    .home__title-color{
        color: #fff;
    }
    #about {
        width:100% !important;
        height:75vh;
        padding-top:20vh !important;
        text-align:center;
        padding:0px 4%;
    }
    #about table {
        width:100%;
        margin-top:6vh;
    }
    #about table tr td {
        text-align:center;
    }
    .btn_one {
    padding:6px 30px;
    width:60%;
    margin:4vh auto;
    box-shadow:0px 10px 20px #05c55b75;
    background:#05C55C;
    color:#fff;
    }
    .btn_one:hover {
        box-shadow:0px 10px 40px #05c55b75;
        cursor:pointer;
    }
    #contact table tr td {
        width:100%;
        display:block;
    }
    #inner_table tr td{
        padding:10px 0px !important;
    }
    #contact form input {
        width:90%;
    }
    #contact form textarea {
        width:90%;
    }
    #work h1 {
        width:19%;
    }
    #bio h1 {
        width:25%;
    }
    #contact h1 {
        width:33%;
    }
    header {
        width:100%;
        background:rgba(0, 0, 0, 0.267);
        padding:4vh 2vw;
        position:absolute;
    }
    #header table tr td {
        width:100%;
        display:block;
        text-align:center;
        padding:15px 0px;
    }
}

